# aerugo

./: .gitignore  Cargo.toml  make_spreadsheet.py  Хуй
assets/: Cargo.toml
src/: bevy_glue.rs  condition.rs  control.rs  fabula.rs  game.rs  inspect.rs  international.rs  lib.rs  main.rs  overlay.rs  shorts.rs  simple_sprite.rs  traits.rs  types.rs  widgets.rs  wrapper.rs
src/control/: user_actions.rs
src/fabula/: core.rs  widgets.rs
src/fabula/widgets/: base.rs  read.rs
src/game/: systems.rs
src/main_menu/: components.rs  systems.rs
src/overlay/: systems.rs
src/shorts/: is_game.rs  utility.rs
src/traits/: is_game.rs
src/types/: canvas.rs  state_machine.rs  utility.rs  widgets.rs
src/widgets/: actions.rs  aerugo.rs  base.rs  closure.rs  container.rs  flex.rs  prelude.rs  root.rs  snippets.rs  svg.rs  text.rs  utility.rs
src/wrapper/: aerugo_wrapper.rs  main_wrapper.rs
