[package]
name = "aerugo"
version = "0.1.0"
authors = ["FaneTheEternal <artemyev.vova@gmail.com>"]
edition = "2021"

[[bin]]
name = "game"

[[bin]]
name = "editor"

[[bin]]
name = "demo"

[dependencies]
bevy = { path = "bevy", features = ["jpeg", "tga", "bmp", "dds", "flac", "mp3", "wav"] }

ron = "0.7"
serde = { version = "1", features = ["derive"] }

uuid = { version = "0.8", features = ["serde", "v4"] }
substring = "1.4.5"
