[package]
name = "aerugo"
version = "0.1.0"
authors = ["FaneTheEternal <artemyev.vova@gmail.com>"]
edition = "2021"

[[bin]]
name = "game"

[[bin]]
name = "demo"

[profile.release-max]
inherits = "release"
strip = true
lto = true
codegen-units = 1

[dependencies]
ron = "0.7"
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
substring = "1.4.5"
const_format = "0.2.26"
strum = "0.24.1"
strum_macros = "0.24.3"
chrono = { version = "0.4.22", features = ["default", "serde"] }

bevy-inspector-egui = "0.12.1"

[dependencies.bevy]
#path = '..\bevy'
version = '0.8.0'
features = ["bevy_sprite", "jpeg", "tga", "bmp", "dds", "flac", "mp3", "wav"]

[dependencies.bevy_egui]
#path = '..\bevy_egui'
version = '0.15.0'
