[package]
name = "rust_pcap"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[[bin]]
name = "get_stats"

[[bin]]
name = "tensor_test"

[dependencies]
#pcap = "0.9.2"
pcap-parser = { version = "0.14.0", features = ["data"] }
byteorder = "1.4.3"
derive_more = "0.99.17"
analyze_derive = { path = "crates/analyze_derive" }
rand = "0.8.5"
ron = "0.7.1"
serde = { version = "1.0.137", features = ["derive"] }

tracing = "0.1.35"
tracing-subscriber = "0.3.11"

tensorflow = { version = "0.18.0" }

csv = "1.1.6"

rayon = "1.5.3"
